Edited all comments